fixed horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -64,19 +64,28 @@ img {
 }
 
 .container {
+  max-width: 1400px; /* Максимальна ширина контейнера */
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow-x: hidden;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container {
+    width: 480px;
+  }
+}
+.wrapper-side {
   display: flex;
   -moz-column-gap: 57px;
        column-gap: 57px;
-  max-width: 1440px; /* Максимальна ширина контейнера */
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
-@media screen and (max-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
 .menu__btn {
   display: none;
 }
@@ -458,9 +467,6 @@ td:nth-child(5) {
 @media screen and (max-width: 1024px) {
   .customers {
     transform: scale(0.5) translate(-50%, -55%);
-  }
-  .main {
-    width: 968px;
   }
 }
 @media screen and (max-width: 540px) {
