--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -221,9 +221,6 @@ td:nth-child(5) {
   .customers {
     transform: scale(0.5) translate(-50%, -55%);
   }
-  .main {
-    width: 968px;
-  }
 }
 
 @media screen and (max-width: 540px) {
