--- a/sass/layout/_side-bar.scss
+++ b/sass/layout/_side-bar.scss
@@ -1,3 +1,8 @@
+.wrapper-side {
+  display: flex;
+  column-gap: 57px;
+}
+
 .menu__btn {
   display: none;
 }
